ggz-client-libs/ggzcore/ggzcore.h

#define GGZCORE_VERSION_MAJOR 0
#define GGZCORE_VERSION_MINOR 99
#define GGZCORE_VERSION_MICRO 3
#define GGZCORE_VERSION_IFACE "9:0:0+devel"
#define GGZCORE_DBG_CONF   "GGZCORE:CONF"
#define GGZCORE_DBG_GAME   "GGZCORE:GAME"
#define GGZCORE_DBG_HOOK   "GGZCORE:HOOK"
#define GGZCORE_DBG_MODULE "GGZCORE:MODULE"
#define GGZCORE_DBG_NET    "GGZCORE:NET"
#define GGZCORE_DBG_POLL   "GGZCORE:POLL"
#define GGZCORE_DBG_ROOM   "GGZCORE:ROOM"
#define GGZCORE_DBG_SERVER "GGZCORE:SERVER"
#define GGZCORE_DBG_STATE  "GGZCORE:STATE"
#define GGZCORE_DBG_TABLE  "GGZCORE:TABLE"
#define GGZCORE_DBG_XML    "GGZCORE:XML"
typedef enum {
	GGZ_OPT_PARSER      = 0x0001,  
	GGZ_OPT_MODULES     = 0x0002,  
	GGZ_OPT_THREADED_IO = 0x0004,  
	GGZ_OPT_EMBEDDED    = 0x0008,  
	GGZ_OPT_RECONNECT   = 0x0010   
} GGZOptionFlags;
typedef struct _GGZOptions {
	GGZOptionFlags flags;
} GGZOptions;
int ggzcore_init(GGZOptions options);
void ggzcore_destroy(void);
typedef struct _GGZServer   GGZServer;
typedef struct _GGZGameType GGZGameType;
typedef struct _GGZModule   GGZModule;
typedef struct _GGZGame     GGZGame;
typedef enum {
	GGZ_HOOK_OK, 
	GGZ_HOOK_REMOVE, 
	GGZ_HOOK_ERROR, 
	GGZ_HOOK_CRISIS 
} GGZHookReturn;
typedef GGZHookReturn (*GGZHookFunc)(unsigned int id, 
				     const void* event_data, 
				     const void* user_data);
typedef enum {
	GGZ_LOGIN,
	GGZ_LOGIN_GUEST,
	GGZ_LOGIN_NEW
} GGZLoginType;
typedef struct {
	GGZClientReqError status;
	const char *message;
} GGZErrorEventData;
typedef enum {
	GGZ_CONNECTED,
	GGZ_CONNECT_FAIL,
	GGZ_NEGOTIATED,
	GGZ_NEGOTIATE_FAIL,
	GGZ_LOGGED_IN,
	GGZ_LOGIN_FAIL,
	GGZ_MOTD_LOADED,
	GGZ_ROOM_LIST,
	GGZ_TYPE_LIST,
	GGZ_SERVER_PLAYERS_CHANGED,
	GGZ_ENTERED,
	GGZ_ENTER_FAIL,
	GGZ_LOGOUT,
	GGZ_NET_ERROR,
	GGZ_PROTOCOL_ERROR,
	GGZ_CHAT_FAIL,
	GGZ_STATE_CHANGE,
	GGZ_CHANNEL_CONNECTED,
	GGZ_CHANNEL_READY,
	GGZ_CHANNEL_FAIL,
	GGZ_SERVER_ROOMS_CHANGED,
	GGZ_NUM_SERVER_EVENTS
} GGZServerEvent;
typedef struct {
	GGZChatType type; 
	const char *sender; 
	const char *message; 
} GGZChatEventData;
typedef struct {
	GGZLeaveType reason;
	const char *player;
} GGZTableLeaveEventData;
typedef enum {
	GGZ_PLAYER_LIST,
	GGZ_TABLE_LIST,
	GGZ_CHAT_EVENT,
	GGZ_ROOM_ENTER,
	GGZ_ROOM_LEAVE,
	GGZ_TABLE_UPDATE,
	GGZ_TABLE_LAUNCHED,
	GGZ_TABLE_LAUNCH_FAIL,
	GGZ_TABLE_JOINED,
	GGZ_TABLE_JOIN_FAIL,
	GGZ_TABLE_LEFT,
	GGZ_TABLE_LEAVE_FAIL,
	GGZ_PLAYER_LAG,
	GGZ_PLAYER_STATS,
	GGZ_PLAYER_COUNT,
	GGZ_PLAYER_PERMS
} GGZRoomEvent;
typedef enum {
	GGZ_GAME_LAUNCHED,
	GGZ_GAME_LAUNCH_FAIL,
	GGZ_GAME_NEGOTIATED,
	GGZ_GAME_NEGOTIATE_FAIL,
	GGZ_GAME_PLAYING
} GGZGameEvent;
typedef enum {
	GGZ_STATE_OFFLINE, 
	GGZ_STATE_CONNECTING, 
	GGZ_STATE_RECONNECTING, 
	GGZ_STATE_ONLINE, 
	GGZ_STATE_LOGGING_IN, 
	GGZ_STATE_LOGGED_IN, 
	GGZ_STATE_ENTERING_ROOM,  
	GGZ_STATE_IN_ROOM, 
	GGZ_STATE_BETWEEN_ROOMS, 
	GGZ_STATE_LAUNCHING_TABLE, 
	GGZ_STATE_JOINING_TABLE, 
	GGZ_STATE_AT_TABLE, 
	GGZ_STATE_LEAVING_TABLE, 
	GGZ_STATE_LOGGING_OUT 
} GGZStateID;
typedef enum {
	GGZ_ENVIRONMENT_PASSIVE, 
	GGZ_ENVIRONMENT_CONSOLE, 
	GGZ_ENVIRONMENT_FRAMEBUFFER, 
	GGZ_ENVIRONMENT_XWINDOW, 
	GGZ_ENVIRONMENT_XFULLSCREEN 
} GGZModuleEnvironment;
const char * ggzcore_gametype_get_name(const GGZGameType *type);
const char* ggzcore_gametype_get_prot_engine(const GGZGameType *type);
const char* ggzcore_gametype_get_prot_version(const GGZGameType *type);
const char* ggzcore_gametype_get_version(const GGZGameType *type);
const char* ggzcore_gametype_get_author(const GGZGameType *type);
const char* ggzcore_gametype_get_url(const GGZGameType *type);
const char* ggzcore_gametype_get_desc(const GGZGameType *type);
int ggzcore_gametype_get_max_players(const GGZGameType *type);
int ggzcore_gametype_get_max_bots(const GGZGameType *type);
int ggzcore_gametype_get_spectators_allowed(const GGZGameType *type);
int ggzcore_gametype_num_players_is_valid(const GGZGameType *type,
					  unsigned int num);
int ggzcore_gametype_num_bots_is_valid(const GGZGameType *type,
				       unsigned int num);
int ggzcore_conf_initialize	(const char	*g_path,
				 const char	*u_path);
int ggzcore_conf_write_string(const char *section, 
			      const char *key, 
			      const char *value);
int ggzcore_conf_write_int(const char *section, 
			   const char *key, 
			   int value);
int ggzcore_conf_write_list(const char *section, 
			    const char *key, 
			    int argc, 
			    char **argv);
char * ggzcore_conf_read_string(const char *section, 
				const char *key, 
				const char *def);
int ggzcore_conf_read_int(const char *section, const char *key, int def);
int ggzcore_conf_read_list(const char *section, 
			   const char *key, 
			   int *argcp, 
			   char ***argvp);
int ggzcore_conf_remove_section(const char *section);
int ggzcore_conf_remove_key(const char *section, const char *key);
int ggzcore_conf_commit(void);
unsigned int ggzcore_module_get_num(void);
int ggzcore_module_add(const char *name,
	               const char *version,
	               const char *prot_engine,
	               const char *prot_version,
                       const char *author,
		       const char *frontend,
		       const char *url,
		       const char *exe_path,
		       const char *icon_path,
		       const char *help_path,
		       GGZModuleEnvironment environment);
int ggzcore_module_get_num_by_type(const char *game, 
				   const char *engine,
				   const char *version);
GGZModule* ggzcore_module_get_nth_by_type(const char *game, 
					  const char *engine,
					  const char *version,
					  unsigned int num);
const char * ggzcore_module_get_name(const GGZModule *module);
const char* ggzcore_module_get_version(const GGZModule *module);
const char* ggzcore_module_get_prot_engine(const GGZModule *module);
const char* ggzcore_module_get_prot_version(const GGZModule *module);
const char* ggzcore_module_get_author(const GGZModule *module);
const char* ggzcore_module_get_frontend(const GGZModule *module);
const char* ggzcore_module_get_url(const GGZModule *module);
const char* ggzcore_module_get_icon_path(const GGZModule *module);
const char* ggzcore_module_get_help_path(const GGZModule *module);
char** ggzcore_module_get_argv(const GGZModule *module);
GGZGame* ggzcore_game_new(void);
int ggzcore_game_init(GGZGame *game, GGZServer *server, GGZModule *module);
void ggzcore_game_free(GGZGame *game);
int ggzcore_game_add_event_hook(GGZGame *game,
				const GGZGameEvent event, 
				const GGZHookFunc func);
int ggzcore_game_add_event_hook_full(GGZGame *game,
				     const GGZGameEvent event, 
				     const GGZHookFunc func,
				     const void *data);
int ggzcore_game_remove_event_hook(GGZGame *game,
				   const GGZGameEvent event, 
				   const GGZHookFunc func);
int ggzcore_game_remove_event_hook_id(GGZGame *game,
				      const GGZGameEvent event, 
				      const unsigned int hook_id);
int  ggzcore_game_get_control_fd(const GGZGame *game);
void ggzcore_game_set_server_fd(GGZGame *game, unsigned int fd);
GGZModule* ggzcore_game_get_module(const GGZGame *game);
int ggzcore_game_launch(GGZGame *game);
int ggzcore_game_read_data(GGZGame *game);