playground/ggz-python/generated-pyrex/pyggzcore.pyx


    char* ggzcore_gametype_get_name(GGZGameType *type)
    char* ggzcore_gametype_get_prot_engine(GGZGameType *type)
    char* ggzcore_gametype_get_prot_version(GGZGameType *type)
    char* ggzcore_gametype_get_version(GGZGameType *type)
    char* ggzcore_gametype_get_author(GGZGameType *type)
    char* ggzcore_gametype_get_url(GGZGameType *type)
    char* ggzcore_gametype_get_desc(GGZGameType *type)
    int ggzcore_gametype_get_max_players(GGZGameType *type)
    int ggzcore_gametype_get_max_bots(GGZGameType *type)
    int ggzcore_gametype_get_spectators_allowed(GGZGameType *type)
    int ggzcore_gametype_num_players_is_valid(GGZGameType *type, unsigned int num)
    int ggzcore_gametype_num_bots_is_valid(GGZGameType *type, unsigned int num)


    int ggzcore_conf_initialize	(char *g_path, char *u_path)
    int ggzcore_conf_write_string(char *section, 
                                  char *key, 
                                  char *value)
    int ggzcore_conf_write_int(char *section, 
                               char *key, 
                               int value)
    int ggzcore_conf_write_list(char *section, 
                                char *key, 
                                int argc, 
                                char **argv)
    char * ggzcore_conf_read_string(char *section, 
                                    char *key, 
                                    char *locdef)
    int ggzcore_conf_read_int(char *section, char *key, int locdef)
    int ggzcore_conf_read_list(char *section, 
                               char *key, 
                               int *argcp, 
                               char ***argvp)
    int ggzcore_conf_remove_section(char *section)
    int ggzcore_conf_remove_key(char *section, char *key)
    int ggzcore_conf_commit()


    unsigned int ggzcore_module_get_num()
    int ggzcore_module_add(char *name,
                           char *version,
                           char *prot_engine,
                           char *prot_version,
                           char *author,
                           char *frontend,
                           char *url,
                           char *exe_path,
                           char *icon_path,
                           char *help_path)

    int ggzcore_module_get_num_by_type(char *game, 
                                       char *engine,
                                       char *version)

    GGZModule* ggzcore_module_get_nth_by_type(char *game, 
                                              char *engine,
                                              char *version,
                                              unsigned int num)

    int ggzcore_module_launch(GGZModule *module)
    char* ggzcore_module_get_name(GGZModule *module)
    char* ggzcore_module_get_version(GGZModule *module)
    char* ggzcore_module_get_prot_engine(GGZModule *module)
    char* ggzcore_module_get_prot_version(GGZModule *module)
    char* ggzcore_module_get_author(GGZModule *module)
    char* ggzcore_module_get_frontend(GGZModule *module)
    char* ggzcore_module_get_url(GGZModule *module)
    char* ggzcore_module_get_icon_path(GGZModule *module)
    char* ggzcore_module_get_help_path(GGZModule *module)
    char** ggzcore_module_get_argv(GGZModule *module)


    GGZGame* ggzcore_game_new()
    int ggzcore_game_init(GGZGame *game, GGZServer *server, GGZModule *module)
    void ggzcore_game_free(GGZGame *game)
    int ggzcore_game_add_event_hook(GGZGame *game,
                                    GGZGameEvent event, 
                                    GGZHookFunc func)
    int ggzcore_game_add_event_hook_full(GGZGame *game,
                                         GGZGameEvent event, 
                                         GGZHookFunc func,
                                         void *data)
    int ggzcore_game_remove_event_hook(GGZGame *game,
                                       GGZGameEvent event, 
                                       GGZHookFunc func)
    int ggzcore_game_remove_event_hook_id(GGZGame *game,
                                          GGZGameEvent event, 
                                          unsigned int hook_id)

    int  ggzcore_game_get_control_fd(GGZGame *game)
    void ggzcore_game_set_server_fd(GGZGame *game, unsigned int fd)
    GGZModule* ggzcore_game_get_module(GGZGame *game)
    int ggzcore_game_launch(GGZGame *game)
    int ggzcore_game_read_data(GGZGame *game)

# Export to python module.
VERSION_MAJOR = GGZCORE_VERSION_MAJOR
VERSION_MINOR = GGZCORE_VERSION_MINOR
VERSION_MICRO = GGZCORE_VERSION_MICRO

VERSION_IFACE = GGZCORE_VERSION_IFACE
DBG_CONF = GGZCORE_DBG_CONF
DBG_GAME = GGZCORE_DBG_GAME
DBG_HOOK = GGZCORE_DBG_HOOK
DBG_MODULE = GGZCORE_DBG_MODULE
DBG_NET = GGZCORE_DBG_NET 
DBG_POLL = GGZCORE_DBG_POLL
DBG_ROOM = GGZCORE_DBG_ROOM
DBG_SERVER = GGZCORE_DBG_SERVER
DBG_STATE = GGZCORE_DBG_STATE
DBG_TABLE = GGZCORE_DBG_TABLE
DBG_XML = GGZCORE_DBG_XML 

OPT_PARSER = GGZ_OPT_PARSER
OPT_MODULES = GGZ_OPT_MODULES
OPT_THREADED_IO = GGZ_OPT_THREADED_IO

HOOK_OK = GGZ_HOOK_OK
HOOK_REMOVE = GGZ_HOOK_REMOVE
HOOK_ERROR = GGZ_HOOK_ERROR
HOOK_CRISIS = GGZ_HOOK_CRISIS

LOGIN = GGZ_LOGIN
LOGIN_GUEST = GGZ_LOGIN_GUEST
LOGIN_NEW = GGZ_LOGIN_NEW

PLAYER_NONE = GGZ_PLAYER_NONE
PLAYER_NORMAL = GGZ_PLAYER_NORMAL
PLAYER_GUEST = GGZ_PLAYER_GUEST
PLAYER_ADMIN = GGZ_PLAYER_ADMIN

CONNECTED = GGZ_CONNECTED
CONNECT_FAIL = GGZ_CONNECT_FAIL
NEGOTIATED = GGZ_NEGOTIATED
NEGOTIATE_FAIL = GGZ_NEGOTIATE_FAIL
LOGGED_IN = GGZ_LOGGED_IN
LOGIN_FAIL = GGZ_LOGIN_FAIL
MOTD_LOADED = GGZ_MOTD_LOADED
ROOM_LIST = GGZ_ROOM_LIST
TYPE_LIST = GGZ_TYPE_LIST
ENTERED = GGZ_ENTERED
ENTER_FAIL = GGZ_ENTER_FAIL
LOGOUT = GGZ_LOGOUT
NET_ERROR = GGZ_NET_ERROR
PROTOCOL_ERROR = GGZ_PROTOCOL_ERROR
CHAT_FAIL = GGZ_CHAT_FAIL
STATE_CHANGE = GGZ_STATE_CHANGE
CHANNEL_CONNECTED = GGZ_CHANNEL_CONNECTED
CHANNEL_READY = GGZ_CHANNEL_READY
CHANNEL_FAIL = GGZ_CHANNEL_FAIL

PLAYER_LIST = GGZ_PLAYER_LIST
TABLE_LIST = GGZ_TABLE_LIST
CHAT_EVENT = GGZ_CHAT_EVENT
ROOM_ENTER = GGZ_ROOM_ENTER
ROOM_LEAVE = GGZ_ROOM_LEAVE
TABLE_UPDATE = GGZ_TABLE_UPDATE
TABLE_LAUNCHED = GGZ_TABLE_LAUNCHED
TABLE_LAUNCH_FAIL = GGZ_TABLE_LAUNCH_FAIL
TABLE_JOINED = GGZ_TABLE_JOINED
TABLE_JOIN_FAIL = GGZ_TABLE_JOIN_FAIL
TABLE_LEFT = GGZ_TABLE_LEFT
TABLE_LEAVE_FAIL = GGZ_TABLE_LEAVE_FAIL
PLAYER_LAG = GGZ_PLAYER_LAG
PLAYER_STATS = GGZ_PLAYER_STATS

GAME_LAUNCHED = GGZ_GAME_LAUNCHED
GAME_LAUNCH_FAIL = GGZ_GAME_LAUNCH_FAIL
GAME_NEGOTIATED = GGZ_GAME_NEGOTIATED
GAME_NEGOTIATE_FAIL = GGZ_GAME_NEGOTIATE_FAIL
GAME_PLAYING = GGZ_GAME_PLAYING
GAME_OVER = GGZ_GAME_OVER
GAME_IO_ERROR = GGZ_GAME_IO_ERROR
GAME_PROTO_ERROR = GGZ_GAME_PROTO_ERROR

STATE_OFFLINE = GGZ_STATE_OFFLINE
STATE_CONNECTING = GGZ_STATE_CONNECTING
STATE_ONLINE = GGZ_STATE_ONLINE
STATE_LOGGING_IN = GGZ_STATE_LOGGING_IN
STATE_LOGGED_IN = GGZ_STATE_LOGGED_IN
STATE_ENTERING_ROOM = GGZ_STATE_ENTERING_ROOM
STATE_IN_ROOM = GGZ_STATE_IN_ROOM
STATE_BETWEEN_ROOMS = GGZ_STATE_BETWEEN_ROOMS
STATE_LAUNCHING_TABLE = GGZ_STATE_LAUNCHING_TABLE
STATE_JOINING_TABLE = GGZ_STATE_JOINING_TABLE
STATE_AT_TABLE = GGZ_STATE_AT_TABLE
STATE_LEAVING_TABLE = GGZ_STATE_LEAVING_TABLE
STATE_LOGGING_OUT = GGZ_STATE_LOGGING_OUT


def init(options):
    cdef GGZOptions aoptions
    if isinstance(options, int):
        aoptions.flags = options
    return ggzcore_init(aoptions)

def destroy():
    ggzcore_destroy()

# Forward declaration
cdef class ErrorEventData
cdef class TableLeaveEventData
cdef class ChatEventData
cdef class Server
cdef class Room
cdef class Player
cdef class Table
cdef class GameType
cdef class Conf
cdef class Module
cdef class Game

# callback wrappers
cdef GGZHookReturn hookfunc_wrapper(unsigned int id, void* event_data, 
        void* user_data):
    callback, mydata = <object>user_data
    return callback(id, <object>event_data, mydata)

cdef void destroyfunc_wrapper(void* data):
    callback, mydata = <object>data
    callback(mydata)

cdef class ErrorEventData:
    def __init__(self):
        self.message = None
        self.status = None
    cdef void set_event(self, void *adata):
        cdef GGZErrorEventData *data
        data = <GGZErrorEventData*> adata 
        self.message = <char*>(data.message)
        self.status = <GGZClientReqError>data.status

cdef class ChatEventData:
    def __init__(self):
        self.type = None
        self.sender = None
        self.message = None
    cdef void set_event(self, void *adata):
        cdef GGZChatEventData *data
        data = <GGZChatEventData*>adata
        self.type = <GGZChatType>data.type
        self.sender = <char*>(data.sender)
        self.message = <char*>(data.message)

cdef class TableLeaveEventData:
    def __init__(self):
        self.reason = 0
        self.player = None
    cdef void set_event(self, void *adata):
        cdef GGZTableLeaveEventData *data
        data = <GGZTableLeaveEventData*> adata 
        self.reason = <GGZLeaveType>data.reason
        self.player = <char*>(data.player)
